-
Bug
-
Resolution: Done
-
P4: Low
-
5.3.0 Beta1
-
None
-
Linux
-
8e55ee3f610315f8fc346020f40211e0030bcebd (stable, 9.4.2014, 5.3)
When crosscompiling Qt5 (host: Linux, target: Windows), windeployqt fails to link:
.obj/main.o: In function `deploy(Options const&, QMap<QString, QString> const&, QString*)':
main.cpp: (.text+0x223e): undefined reference to `findD3dCompiler(Platform, QString const&, unsigned int)'
This is caused by https://qt.gitorious.org/qt/qttools/commit/7ae7dccfaf03204f466ac41348d2ecf720d0f065 which changed the signature of findD3dCompiler but didn't update the implemtation for !Q_OS_WIN.
- relates to
-
QTBUG-38886 windeployqt fails to link when crosscompiling
-
- Closed
-
For Gerrit Dashboard: QTBUG-38203 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
83050,3 | Fix compilation of windeployqt on platforms other than Windows. | stable | qt/qttools | Status: MERGED | +2 | 0 |