Fix compilation of windeployqt on platforms other than Windows.

Task-number: QTBUG-38203
Change-Id: I0c099f5a6af15234bc21ec757f3e710de2841d20
Reviewed-by: Andrew Knight <andrew.knight@digia.com>
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>