src/windeployqt/utils.cpp
@@ -1,6 +1,6 @@
 /****************************************************************************
 **
-** Copyright (C) 2013 Digia Plc and/or its subsidiary(-ies).
+** Copyright (C) 2014 Digia Plc and/or its subsidiary(-ies).
 ** Contact: http://www.qt-project.org/legal
 **
 ** This file is part of the tools applications of the Qt Toolkit.
@@ -862,7 +862,7 @@ bool readPeExecutable(const QString &, QString *errorMessage,
     return false;
 }
 
-QString findD3dCompiler(Platform, unsigned)
+QString findD3dCompiler(Platform, const QString &, unsigned)
 {
     return QString();
 }
